--- a/src/stylesheets/OrderItem.css
+++ b/src/stylesheets/OrderItem.css
@@ -62,16 +62,7 @@
   font-weight: 800;
 }
 
-.order-box {
-  position: relative;
-  width: 75vw;
-  height: auto;
-  margin: 0 auto;
-  top: 0;
-  right: 0;
-  padding: 0.75em;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.goals-list-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,101 +72,96 @@
           flex-flow: column nowrap;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  border-radius: 8px;
+          justify-content: flex-start;
 }
 
-.order-box .goals-listItem {
+.goals-list-wrap .goals-list-box {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 15px 0 0 0;
+  padding: 0;
+}
+
+.goals-list-wrap .goals-list-box .goals-list-button {
+  background-color: #f5f5f5;
+  border: 1px solid #f3f3f3;
+  border-radius: 5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  margin-bottom: 1em;
-  border-radius: 8px;
-}
-
-.order-box .goals-listItem .goals-listItem-text-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: auto;
-  padding: .3em .6em;
-  background-color: #f5f5f5;
-  border: 1px solid #f3f3f3;
-  border-radius: 4px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  line-height: 0;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin-bottom: 12px;
 }
 
-.order-box .goals-listItem .goals-listItem-text-wrap .goals-listItem-icon {
-  font-size: 15px;
-  color: #000;
-  margin-right: .5em;
+.goals-list-wrap .goals-list-box .goals-list-button .goals-list-icon {
+  font-size: 1em;
+  color: #1c1c1c;
 }
 
-.order-box .goals-listItem .goals-listItem-text-wrap .goals-listItem-text {
-  width: auto;
-  -webkit-box-flex: 0;
-      -ms-flex: none;
-          flex: none;
-}
-
-.order-box .goals-listItem .goals-listItem-text-wrap .goals-listItem-text .MuiListItemText-primary {
-  width: auto;
-  margin-right: .5em;
-  letter-spacing: -0.25px;
+.goals-list-wrap .goals-list-box .goals-list-button .goals-list-text {
+  display: block;
   font-size: 13px;
   font-family: 'Pretendard';
   font-weight: 900;
+  max-width: 200px;
+  margin: 0 10px;
+  overflow: hidden;
 }
 
-.order-box .goals-listItem .goals-listItem-text-wrap .goals-listItem-add-icon {
+.goals-list-wrap .goals-list-box .goals-list-button .goals-list-text p {
+  max-width: 200px;
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-weight: 900;
+}
+
+.goals-list-wrap .goals-list-box .goals-list-button .goals-list-plus-icon-wrap {
+  background-color: #1c1c1c;
+  width: 10px;
+  height: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-width: 0;
-  width: 16px;
-  height: 16px;
-  background: white;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-radius: 50%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.order-box .goals-listItem .goals-listItem-text-wrap .goals-listItem-add-icon span {
-  color: #000;
+.goals-list-wrap .goals-list-box .goals-list-button .goals-list-plus-icon-wrap .goals-list-plus-icon {
+  font-size: 1.4em;
+  color: #ffffff;
 }
 
-.order-box .goals-todo-input-title {
-  display: block;
+.todos-list-wrap {
+  width: 100vw;
 }
 
-.goals-todo-input-list-Box {
-  width: 100%;
-  min-width: 320px;
+.todos-list-wrap .todos-list-box {
+  width: 100vw;
+}
+
+.todos-list-wrap .todos-list-box .goals-listItem-text-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -183,75 +169,56 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0.1em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.todos-list-wrap .todos-list-box .goals-listItem-text-wrap .todos-list-check-icon {
+  color: #afafaf;
+  cursor: pointer;
+}
+
+.todos-list-wrap .todos-list-box .goals-listItem-text-wrap .todos-list-input {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  position: relative;
+  border: 0;
+  border-bottom: 0px solid #00000000;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  width: 100%;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list-input-check-icon {
-  margin-right: 0.5em;
-  color: #afafaf;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list {
-  width: 100%;
+  outline: none;
+  font-size: 14px;
   font-family: 'Pretendard';
-  font-size: 0.95em;
-  outline: 0;
-  border: 0;
+  font-weight: 600;
+  -webkit-transform: rotate(0.04deg);
+          transform: rotate(0.04deg);
+  cursor: pointer;
+  padding: 6px 0;
+  margin: 5px 5px 5px 15px;
 }
 
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list::-webkit-input-placeholder {
-  color: #1c1c1c;
+.todos-list-wrap .todos-list-box .goals-listItem-text-wrap .todos-list-input::-ms-value {
+  font-size: 14px;
+  font-family: 'Pretendard';
+  font-weight: 600;
+  transform: rotate(0.04deg);
 }
 
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list:-ms-input-placeholder {
-  color: #1c1c1c;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list::-ms-input-placeholder {
-  color: #1c1c1c;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list::placeholder {
-  color: #1c1c1c;
-}
-
-.goals-todo-input-list-Box .goals-todo-input-list-check-wrap .goals-todo-list:focus-visible {
+.todos-list-wrap .todos-list-box .goals-listItem-text-wrap .todos-list-input:focus-visible {
   position: relative;
-  border: none;
+  border-bottom: 0px solid #00000000;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
   font-family: 'Pretendard';
-  font-size: 0.95em;
-}
-
-.goals-todo-input-list-Box .goals-todo-list-input-btn {
-  visibility: hidden;
-}
-
-.goals-todo-input-list-Box .goals-todo-list-input-btn .goals-todo-list-input-btn-icon {
-  position: relative;
-  color: #afafaf;
-  top: -1px;
+  font-size: 14px;
+  cursor: pointer;
+  padding: 6px 0;
+  margin: 5px 5px 5px 15px;
 }
 /*# sourceMappingURL=OrderItem.css.map */
