--- a/src/stylesheets/Nav.scss
+++ b/src/stylesheets/Nav.scss
@@ -1,5 +1,7 @@
-@import './abstracts/font';
+
 @import './abstracts/variables';
+@import './abstracts/font';
+@import './abstracts/mixin';
 
 body{
     font-family: 'Pretendard', 'Egyptian Slate Prot';
@@ -30,3 +32,83 @@ body{
     
 }
 
+.snb_wrap{
+    padding: 10px 15px 10px 15px;
+    //width: 235;
+
+        .snb-goal-title{
+        font-family: 'Pretendard';
+        font-weight: 600;
+        font-size: 16px;
+        }
+            .snb-title-nav-icon{
+                font-weight: 50;
+                font-size: 20px;
+                color: lightgray;
+            }
+    .snb-goals-list-box {
+        width: fit-content;
+        margin: 0px 0 0 0;
+        padding: 0;
+        display: flex;
+        flex-flow: row nowrap;
+        
+            .snb-list-button{
+                background-color: $goal-btn-gray;
+                border: 1px solid $goal-btn-border-gray;
+                border-radius: 5px;
+                width: fit-content;
+                padding: 2px 2px;
+                padding-right: 2px;
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+                line-height: 0;
+                min-width:fit-content;
+                max-width:fit-content;
+                margin-bottom: 12px;
+                margin-right: 5px;
+            
+                .snb-goals-list-text{
+                    display: block;
+                    font-size: 13px;
+                    font-family: 'Pretendard';
+                    font-weight: 900;
+                    max-width: 200px; 
+                    margin: 0 10px; 
+                    overflow: hidden;
+                   
+                    p{
+                        max-width: 200px; 
+                        display:block; 
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        font-weight: 900;
+                    }
+                }
+            
+            }
+        }
+    
+
+    .snb-todo-list-box{
+        width: 100vw;
+        font-size: 13px;
+        display: flex;
+        flex-flow: column nowrap;
+        
+        .goals-listItem-text-wrap{
+            display: flex;
+            flex-flow: row nowrap;
+            align-items: center;
+
+            .todos-list-check-icon{
+                color: $text-gray;
+            }
+            p{
+                padding: 0px 5px;
+                color: $text-black;
+            }
+        }
+    }
+}
