--- a/src/stylesheets/Follow.css
+++ b/src/stylesheets/Follow.css
@@ -70,9 +70,10 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-top: 0px;
 }
 
 .follow-follow-list-wrap .follow-list-box {
@@ -135,7 +136,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 1200px;
+  width: 1300px;
 }
 
 .follow-follow-list-wrap .follow-list-box .follows-list-box .follow-list-button {
