--- a/src/stylesheets/Follow.scss
+++ b/src/stylesheets/Follow.scss
@@ -6,10 +6,11 @@
 .follow-follow-list-wrap{
   display: flex;
   flex-flow: column nowrap;
-  justify-content: space-between;
-  //padding: 10px;
+  justify-content: flex-start;
+  padding-top: 0px;
 
     .follow-list-box {
+      // top 줄이기 
       display: flex;
       //flex-flow: row nowrap;
       justify-content: space-between;
@@ -60,7 +61,7 @@
         //padding: 0;
         
         // ***** 폭 넓이에 따라 변하게 수정 
-        width: 1200px;
+        width: 1300px;
 
           .follow-list-button{
             width: fit-content;
