--- a/src/stylesheets/Nav.css
+++ b/src/stylesheets/Nav.css
@@ -96,4 +96,116 @@ body .basic_nav_box .basic_nav_appbar .navbar_title {
   font-size: 1em;
   font-weight: 900;
 }
+
+.snb_wrap {
+  padding: 10px 15px 10px 15px;
+}
+
+.snb_wrap .snb-goal-title {
+  font-family: 'Pretendard';
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.snb_wrap .snb-title-nav-icon {
+  font-weight: 50;
+  font-size: 20px;
+  color: lightgray;
+}
+
+.snb_wrap .snb-goals-list-box {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0px 0 0 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+}
+
+.snb_wrap .snb-goals-list-box .snb-list-button {
+  background-color: #f5f5f5;
+  border: 1px solid #f3f3f3;
+  border-radius: 5px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 2px 2px;
+  padding-right: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  line-height: 0;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin-bottom: 12px;
+  margin-right: 5px;
+}
+
+.snb_wrap .snb-goals-list-box .snb-list-button .snb-goals-list-text {
+  display: block;
+  font-size: 13px;
+  font-family: 'Pretendard';
+  font-weight: 900;
+  max-width: 200px;
+  margin: 0 10px;
+  overflow: hidden;
+}
+
+.snb_wrap .snb-goals-list-box .snb-list-button .snb-goals-list-text p {
+  max-width: 200px;
+  display: block;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-weight: 900;
+}
+
+.snb_wrap .snb-todo-list-box {
+  width: 100vw;
+  font-size: 13px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+}
+
+.snb_wrap .snb-todo-list-box .goals-listItem-text-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.snb_wrap .snb-todo-list-box .goals-listItem-text-wrap .todos-list-check-icon {
+  color: #afafaf;
+}
+
+.snb_wrap .snb-todo-list-box .goals-listItem-text-wrap p {
+  padding: 0px 5px;
+  color: #1c1c1c;
+}
 /*# sourceMappingURL=Nav.css.map */
