--- a/src/stylesheets/Feed.scss
+++ b/src/stylesheets/Feed.scss
@@ -172,8 +172,8 @@
                         margin: 5px 5px 5px 15px;
                     }
                 }
-                .todos-list-like{
-                    width: 14px;
+                .todos-list-like-btn{
+                    min-width: 2.5em;
                     margin-left: 1em;
                     background: $bg-white;
                     border: none;
@@ -183,6 +183,15 @@
                         font-size: 1rem;
                         color: $text-black;
                     }
+
+                    .todos-list-like-num{
+                        margin-left: 0.25rem;
+                        font-size: 12px;
+                        color: $text-black;
+                    }
+                }
+                .MuiButton-textPrimary{
+                    width: 14px;
                 }
             }
         }
