--- a/src/stylesheets/Feed.css
+++ b/src/stylesheets/Feed.css
@@ -895,4 +895,43 @@
   font-family: 'Pretendard';
   cursor: pointer;
 }
+
+.like-todo-modal-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 320px;
+  height: auto;
+  border-radius: 8px;
+  padding: 1.5em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  font-family: 'Pretendard';
+  background-color: #ffffff;
+}
+
+.like-todo-modal-wrap h1 {
+  font-size: 1.1em;
+  text-align: center;
+}
+
+.like-todo-modal-wrap .like-todo-modal-data {
+  font-size: 0.9em;
+  margin-left: 25px;
+  list-style-type: circle;
+}
+
+.like-todo-modal-wrap .like-todo-modal-data p {
+  margin-bottom: -5px;
+  color: #1c1c1c;
+}
+
+.like-todo-modal-wrap .like-todo-modal-data p:last-child {
+  font-size: 0.9em;
+  margin-bottom: 5px;
+}
 /*# sourceMappingURL=Feed.css.map */
