--- a/src/stylesheets/Follow.css
+++ b/src/stylesheets/Follow.css
@@ -90,6 +90,38 @@
   padding: 0;
 }
 
+.follow-follow-list-wrap .follow-list-box .setting-settings-list-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  padding: 10px 10px 10px 10px;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.follow-follow-list-wrap .follow-list-box .setting-list-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 10px 0 0 0;
+  padding: 0px 0px;
+  width: 100%;
+}
+
 .follow-follow-list-wrap .follow-list-box .follow-list-name {
   display: -webkit-box;
   display: -ms-flexbox;
