--- a/src/stylesheets/Follow.css
+++ b/src/stylesheets/Follow.css
@@ -88,6 +88,9 @@
           align-items: center;
   margin: 0 0 0 0;
   padding: 0;
+  font-size: 14px;
+  font-family: 'Pretendard';
+  font-weight: 300;
 }
 
 .follow-follow-list-wrap .follow-list-box .setting-settings-list-wrap {
@@ -98,9 +101,12 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  padding: 10px 10px 10px 10px;
+  padding: 0px 0px 0px 0px;
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
+  font-size: 14px;
+  font-family: 'Pretendard';
+  font-weight: 300;
 }
 
 .follow-follow-list-wrap .follow-list-box .setting-list-box {
@@ -117,9 +123,26 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 10px 0 0 0;
+  margin: 0px 0 0 0;
   padding: 0px 0px;
   width: 100%;
+  font-size: 14px;
+  font-family: 'Pretendard';
+  font-weight: 600;
+}
+
+.follow-follow-list-wrap .follow-list-box .setting-list-box .setting-list-text {
+  font-size: 16px;
+  font-family: 'Pretendard';
+  font-weight: 600;
+}
+
+.follow-follow-list-wrap .follow-list-box .setting-list-box .setting-list-text p {
+  font-size: 14px;
+  font-family: 'Pretendard';
+  font-weight: 600;
+  margin-left: 14px;
+  color: #1c1c1c;
 }
 
 .follow-follow-list-wrap .follow-list-box .follow-list-name {
