--- a/src/stylesheets/Signin.scss
+++ b/src/stylesheets/Signin.scss
@@ -38,3 +38,10 @@ a{
     font-weight: 600;
     text-decoration: none;
 }
+
+.error_message{
+    color: $text-gray;
+    font-weight: 300;
+    font-size: 13px;
+    margin:0;
+}
