kenna: feat: 캘린더에서 날짜 선택 시 todo 데이터 변경 함수 구현
- CalendarBox 컴포넌트에서 selectedDate 선택 시 axios 함수 실행
- atom의 데이터 변경되는 함수는 미구현
- CalendarBox 날짜 표시 CSS 일부 수정

--- a/src/stylesheets/CalendarBox.css
+++ b/src/stylesheets/CalendarBox.css
@@ -121,7 +121,7 @@ body {
 }
 
 .MuiPickersBasePicker-pickerView .MuiTypography-body1 {
-  display: none;
+  display: block;
 }
 
 .MuiPickersBasePicker-pickerView .MuiPickersCalendar-transitionContainer {
