--- a/src/stylesheets/CalendarBox.scss
+++ b/src/stylesheets/CalendarBox.scss
@@ -70,7 +70,7 @@ body{
     }
 
     .MuiTypography-body1{
-        display: none;
+        display: block;
     }
 
     .MuiPickersCalendar-transitionContainer{
