--- a/src/stylesheets/abstracts/_mixin.scss
+++ b/src/stylesheets/abstracts/_mixin.scss
@@ -81,7 +81,7 @@
   }
   @font-face {
     font-family: 'Egyptian Slate Pro';
-    src: url("http://fonts.cdnfonts.com/css/egyptian-slate-pro");
+    src: url("https://fonts.cdnfonts.com/css/egyptian-slate-pro");
     unicode-range: U+0041-005A, U+0061-007A;
     font-weight: 800;
   }
